Ajout d'une option pour garder la barre de navigation fixe (toujours visible), activée par defaut. Ajouter "scrolling_bar: false" pour désactiver.

--- a/stylesheets/navigation_bar.0-4.css
+++ b/stylesheets/navigation_bar.0-4.css
@@ -1,6 +1,7 @@
 /* @override 
 	http://localhost:8080/stylesheets/navigation_bar.0-4.css
 	http://recherche.catholique.fr/stylesheets/navigation_bar.0-4.css
+	http://0-4-7.latest.catholiquefr.appspot.com/stylesheets/navigation_bar.0-4.css
 */
 
 /* Reset div */
@@ -24,6 +25,10 @@
 	display: block;
 	right: 0;
 	text-align: left;
+	z-index: 999999;
+	-webkit-box-shadow: 0px 0px 6px rgba(1,1,1,0.5);
+	-moz-box-shadow: 0px 0px 6px rgba(1,1,1,0.5);
+	box-shadow: 0px 0px 6px rgba(1,1,1,0.5);
 }
 
 #cef_navigation a img {
@@ -121,9 +126,9 @@
 	top: 23px;
 	background-color: white;
 	width: 390px;
-	-webkit-box-shadow: 4px 10px 10px #c2c2c2;
-	-moz-box-shadow: 4px 10px 10px #c2c2c2;
-	box-shadow: 4px 10px 10px #c2c2c2;
+	-webkit-box-shadow: 4px 6px 9px rgba(1,1,1,0.3);
+	-moz-box-shadow: 4px 6px 9px rgba(1,1,1,0.3);
+	box-shadow: 4px 6px 9px rgba(1,1,1,0.3);
 	color: gray;
 	padding: 7px 0;
 	border: 1px solid #f2f2f2;
